# diranalyzer

./: Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall.sh
src/: analyzer.rs  cli.rs  duplicates.rs  export.rs  lib.rs  main.rs  reporter.rs  scanner.rs  utils.rs
