[package]
name = "diranalyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance CLI tool for comprehensive directory analysis with size breakdowns, file type distributions, and duplicate detection"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/diranalyzer"
repository = "https://github.com/yourusername/diranalyzer"
keywords = ["cli", "directory", "analysis", "filesystem", "duplicates"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "diranalyzer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
indicatif = "0.17"
colored = "2.0"
humansize = "2.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.7"
dashmap = "5.5"
regex = "1.10"
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
